@@ -27,6 +27,8 @@ MINOR CHANGES
 
     o Replace a couple if-else instances with switch in utils.cpp
 
+    o Speed increases to shuffle_sequences(..., method = c("linear", "random"))
+
 CHANGES IN VERSION 1.0.22
 -------------------------
 
